--- a/gui.ui
+++ b/gui.ui
@@ -47,7 +47,7 @@
      <string>Activity</string>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit">
+   <widget class="QPlainTextEdit" name="textEditPlaintext">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -70,7 +70,7 @@
      <string>Text</string>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_2">
+   <widget class="QPlainTextEdit" name="textEditPlaintext_2">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -106,7 +106,7 @@
      <string>Key</string>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_3">
+   <widget class="QPlainTextEdit" name="textEditKey">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -116,7 +116,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="generateButton">
     <property name="geometry">
      <rect>
       <x>360</x>
@@ -142,17 +142,7 @@
      <string>Hasil</string>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_4">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>510</y>
-      <width>441</width>
-      <height>87</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="saveButton">
     <property name="geometry">
      <rect>
       <x>360</x>
@@ -163,6 +153,16 @@
     </property>
     <property name="text">
      <string>Save to file</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>510</y>
+      <width>441</width>
+      <height>87</height>
+     </rect>
     </property>
    </widget>
   </widget>
