--- a/gui.ui
+++ b/gui.ui
@@ -155,7 +155,7 @@
      <string>Save to file</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit">
+   <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
       <x>20</x>
